--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rain Effect Experiments | Demo 1 | Codrops</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
-    
+	<link rel="stylesheet" type="text/css" href="css/style1.css" />
+	<!--[if IE]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 </head>
 
 <body class="demo-1">
 
 	<canvas width="1" height="1" id="container" style="position:absolute"></canvas>
 			
+	<!-- /container -->
 	<script src="index.js"></script>
 </body>
 
